deployment/deploymentVolumeCm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-liberty
  name: spring-liberty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-liberty
  template:
    metadata:
      labels:
        app: spring-liberty
    spec:
      containers:
        - name: spring-liberty
          image: gooner4life/spring-liberty:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
          volumeMounts:
            - name: config-volume
              mountPath: "/etc/config"
            - name: db-secret-volume
              mountPath: "/etc/config"
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: spring-liberty-cm
        - name: db-secret-volume
          secret:
            secretName: db-password-secret
