deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-liberty
  name: spring-liberty-service
spec:
  type: NodePort
  ports:
    - name: https
      protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: spring-liberty
