deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-liberty-route
  labels:
    app: spring-liberty
spec:
  to:
    kind: Service
    name: spring-liberty-service
    weight: 100
  port:
    targetPort: https
  wildcardPolicy: None
